@@ -1,5 +1,7 @@
 XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Switching history hot keys to Alt+PgDown and Alt+PgUp
+* Adding support for Alt+Left and Alt+Right hot keys
 * Bug fix: check that all the modified files are saved before letting a new
   project to be created. Issue #273.
 * Move the focus to the text editor if the focus was not in the editor and the
